src/index.css
body {
  margin: 0px;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

*{
  margin: 0px;
}

h1{
  text-align: center;
}

nav{
  display: flex;
  color: white;
  background-color: black;
  justify-content: space-around;
  height: 8vh;
  align-items: center;
}

.nav-items{
  display: flex;
  width: 30%;
  justify-content: space-around;
}

.nav-items li{
  list-style: none;
}

a{
  text-decoration: none;
  color: white;
}

.logo h1 a{
  text-transform: uppercase;
}

.burger{
  display: none;
}

.burger div{
  height: 3px;
  width: 25px;
  margin: 5px;
  background-color: white;
  transition: all 0.3s ease;
}

.burger:hover{
  cursor: pointer;
}

@media screen and (max-width: 1025px){
  .nav-items{
    width: 50%;
  }
}

@media screen and (max-width: 750px){
  html, body{
    overflow-x: hidden;
  }

  .nav-items{
    position: absolute;
    right: 0px;
    top: 8vh;
    background-color: black;
    height: 92vh;
    flex-direction: column;
    align-items: center;
    transform: translateX(100%);
    transition: transform 0.5s ease-in;
    z-index:1;
  }

  .nav-items li{
    opacity: 0;
  }
  
  .burger{
    display: block;
  }
}

.nav-active{
  transform: translateX(0%)
}

.toggle-burger .line1{
  transform: rotate(-45deg) translate(-5px,6px);
}

.toggle-burger .line2{
  opacity: 0
}

.toggle-burger .line3{
  transform: rotate(45deg) translate(-5px,-6px);
}

#home{
  height: 92vh;
  width: 100%;
  height: 92vh;
  position: relative;
  background-color: rgb(52, 222, 235);
  /* background-image: url("./bg-image/blue-background.jpg"); */
   /* background-image: url("./bg-image/pexels-anthony-132477.jpg"); */
   /* background-image: url("./bg-image/pexels-tomáš-malík-3607083.jpg"); */
  background-size: cover;
  background-position: center;
}

.banner{
  width: 100%;
  position: absolute;
  top: 25%;
  height: 50%;
  text-align: center;
  overflow: hidden;
}

.banner h1{
  font-size: 5rem;
  text-transform: uppercase;
}

.banner span{
  display: inline-block;
  /* text-transform: uppercase; */
  position: absolute;
  right: 0%;
  transform: translateX(100%);
  opacity: 0;
}

.banner span.one{

  animation: slidein 5s ease 1s forwards;

}

.banner span.two{
  animation: slidein 5s ease 6s forwards;
}

 .banner span.three{
  animation: slidein 5s ease 11s forwards;
}

.banner span.four{
  opacity: 0;
  bottom: 0%;
  left: 50%;
  transform: translate(-50%,100%);
  animation: slideup 2s ease 16s forwards; 
}

/* ANIMATIONS */

@keyframes navItemFade{
  from{
    opacity: 0;
    transform: translateX(50px);
  }

  to{
    opacity: 1;
    transform: translateX(0px);
  }
}

@keyframes slidein{
  0% {opacity: 0;
     transform: translateX(100%)
  }
  
  50% {opacity: 1;
       right: 50%;
       transform: translateX(50%);
  }
  
  60% {opacity: 1;
    right: 50%;
    transform: translateX(50%);
  }
  65% {opacity: 1;
  right: 50%;
  transform: translateX(50%);
  } 
  70% {opacity: 1;
  right: 50%;
  transform: translateX(50%);
  }  

  80% {
    opacity: 0.8;
  } 

  
  85% {
    opacity: 0;
  }

  100%{
    opacity: 0;
    right: 85%;
    transform: translateX(-100%);
  }
}

@keyframes slideup {
  0% {opacity: 0;
    left: 50%;
    transform: translate(-50%,100%);
 }  

  100%{
  opacity: 1;
  bottom: 50%;
  transform: translate(-50%,100%)
}
}

#services{
  height: 80vh;
  position: relative;
}

.heading{
  padding-top: 20px;
  margin-bottom: 10px;
}

.service-container{
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  border-bottom: 2px solid;
  display: flex;
  justify-content: space-around;
}

.service{
  height: 400px;
  width: 15%;
}

.service *{
  margin-bottom: 10px;
}

.service-image-container{
  background-color: black;
  height: 200px;
  width: 200px;
  position: relative;
  left: 50%;
  transform: translateX(-50%);
}

#portfolio{
height: 100vh;
background-color: #042a2d;
}

#portfolio h1{
  color: #eefcfd;
}

#about{
height: 100vh;
background-color: white;
color: black;
}

#contact{
height: 100vh;
background-color: #042a2d;
position: relative;
}

#contact h1{
  color: #eefcfd
}

.content{
  width: 90%;
  height: 75%;
  margin: 5% auto;
  display: flex;
  justify-content: center;
}

.about-me-container{
  width: 30%;
}

.about-me{
  width: 100%;
  height: 60%;
  background-color: rgb(52, 222, 235);
  position: relative;
}

.about-me span{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
}

.skills{
  width: 70%;
  margin-left: 20px;
}

.skills article{
  background-color: rgb(52, 222, 235);
  position: relative;
  height: 7%;
  margin-bottom: 5px;
}

.skill .skill-name{
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

.skill-name{
  left: 10px;
}

.percentage{
  position: absolute;
  right: 0px;
  background-color: #b0f2f7;
  height: 100%;
}

/* Width classes for the skill bars*/
.w9{
  width: 70px
}

.w8{
  width: 140px
}

.w7{
  width: 280px
}

.w6{
  width: 560px
}

.w5{
  width: 1120px
}

.w4{
  width: 2240px
}

.w3{
  width: 4480px
}

.w2{
  width: 70px
}

.w1{
  width: 70px
}

.percentage span{
  position: absolute;
  right: 15px;
  top: 50%;
  transform: translateY(-50%);
}

.rule{
  width: 2%;
  margin-left: auto;
  margin-right: auto;
  background-color: rgb(52, 222, 235);
  height: 3px;
}

.contact-container{
  display: flex;
  width: 75%; 
  margin-left: auto;
  margin-right: auto;
  margin-top: 5%;
  justify-content: space-around;
  flex-wrap: wrap;
}

.contact-details{
  width: 30%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.contact-detail{
  display: flex;
}

.contact-detail p{
  color: #eefcfd;
  align-self: center;
}

.contact-icon{
  background-color: rgb(52, 222, 235);
  width: 100px;
  height: 100px;
  margin-right: 20px;
}

.contact-icon img{
  height: inherit;
  width: inherit;
}

form{
  width: 50%;
  text-align: center;
}

form h1{
  margin-bottom: 20px;
  color: rgb(52, 222, 235);
}

.form-item{
  width: 100%;
  margin-bottom: 20px;
}

input{
  width: 100%;
  height: 30px;
  padding-left: 5px;
  padding-bottom: 5px;
  outline: none;
  background-color: rgb(63, 70, 82);
  border: none;
  color: white;
}

textarea{
  width: 100%;
  height: 150px;
  padding-left: 5px;
  padding-top: 5px;
  outline: none;
}

button{
  border: none;
  background-color: rgb(52, 222, 235);
  outline: none;
  cursor: pointer;
  width: 50%;
  height: 50px;
}

.form-item.button{
  text-align: left;
}

.form-item button{
  font-weight: bold;
  font-family: inherit;
  letter-spacing: 2px;
}

input{
  font-family: inherit;
}

textarea{
  font-family: inherit;
}

footer{
  position: absolute;
  bottom: 0px;
  background-color: #031b1d;
  width: 100%;
  height: 150px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.social-icon{
  width: 50px;
  height: 50px;
  margin-left: 20px;
  background-color: rgb(52, 222, 235);
  padding: 5px;
}

.social-icon a{
  width: 100%;
  height: 100%;
}

.social-icon img{
  width: inherit;
  height: inherit;
}

.works-container{
  width: 75%;
  margin-left: auto;
  margin-right: auto;
  margin-top: 5%;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-auto-rows: 300px;
  grid-auto-columns: 300px;
}
.work{
width: 100%;
overflow: hidden;
}

.work img{
  height: 100%;
  width: 100%;
  object-fit: cover;
}

